build/log/idf_py_stderr_output_216566
/home/a/Documentos/workspace_esp32/projeto_TCP_Contador/main/tcp_eth.c: In function 'ethernet_init':
/home/a/Documentos/workspace_esp32/projeto_TCP_Contador/main/tcp_eth.c:47:5: warning: 'smi_mdc_gpio_num' is deprecated: Please use smi_gpio instead [-Wdeprecated-declarations]
   47 |     emac_config.smi_mdc_gpio_num = ETH_MDC_GPIO;
      |     ^~~~~~~~~~~
In file included from /home/a/Downloads/esp-idf-v5.4.1/components/esp_eth/include/esp_eth_driver.h:13,
                 from /home/a/Downloads/esp-idf-v5.4.1/components/esp_eth/include/esp_eth.h:15,
                 from /home/a/Documentos/workspace_esp32/projeto_TCP_Contador/main/tcp_eth.c:14:
/home/a/Downloads/esp-idf-v5.4.1/components/esp_eth/include/esp_eth_mac_esp.h:171:17: note: declared here
  171 |             int smi_mdc_gpio_num __attribute__((deprecated("Please use smi_gpio instead")));  /*!< SMI MDC GPIO number, set to -1 could bypass the SMI GPIO configuration */
      |                 ^~~~~~~~~~~~~~~~
/home/a/Documentos/workspace_esp32/projeto_TCP_Contador/main/tcp_eth.c:48:5: warning: 'smi_mdio_gpio_num' is deprecated: Please use smi_gpio instead [-Wdeprecated-declarations]
   48 |     emac_config.smi_mdio_gpio_num = ETH_MDIO_GPIO;
      |     ^~~~~~~~~~~
/home/a/Downloads/esp-idf-v5.4.1/components/esp_eth/include/esp_eth_mac_esp.h:172:17: note: declared here
  172 |             int smi_mdio_gpio_num __attribute__((deprecated("Please use smi_gpio instead"))); /*!< SMI MDIO GPIO number, set to -1 could bypass the SMI GPIO configuration */
      |                 ^~~~~~~~~~~~~~~~~
/home/a/Documentos/workspace_esp32/projeto_TCP_Contador/main/tcp_eth.c:57:15: error: 'eth_phy_config_t' has no member named 'clock_config'
   57 |     phy_config.clock_config.rmii.clock_mode = ETH_CLK_MODE;
      |               ^
/home/a/Documentos/workspace_esp32/projeto_TCP_Contador/main/tcp_eth.c:27:26: error: 'ETH_CLOCK_GPIO0_OUT' undeclared (first use in this function)
   27 | #define ETH_CLK_MODE     ETH_CLOCK_GPIO0_OUT  // Clock de 50MHz gerado pelo ESP32 na GPIO0
      |                          ^~~~~~~~~~~~~~~~~~~
/home/a/Documentos/workspace_esp32/projeto_TCP_Contador/main/tcp_eth.c:57:47: note: in expansion of macro 'ETH_CLK_MODE'
   57 |     phy_config.clock_config.rmii.clock_mode = ETH_CLK_MODE;
      |                                               ^~~~~~~~~~~~
/home/a/Documentos/workspace_esp32/projeto_TCP_Contador/main/tcp_eth.c:27:26: note: each undeclared identifier is reported only once for each function it appears in
   27 | #define ETH_CLK_MODE     ETH_CLOCK_GPIO0_OUT  // Clock de 50MHz gerado pelo ESP32 na GPIO0
      |                          ^~~~~~~~~~~~~~~~~~~
/home/a/Documentos/workspace_esp32/projeto_TCP_Contador/main/tcp_eth.c:57:47: note: in expansion of macro 'ETH_CLK_MODE'
   57 |     phy_config.clock_config.rmii.clock_mode = ETH_CLK_MODE;
      |                                               ^~~~~~~~~~~~
/home/a/Documentos/workspace_esp32/projeto_TCP_Contador/main/tcp_eth.c:58:15: error: 'eth_phy_config_t' has no member named 'clock_config'
   58 |     phy_config.clock_config.rmii.clock_gpio = 0;
      |               ^
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/tcp_eth.c.obj] Erro 1
make[1]: *** [CMakeFiles/Makefile2:5721: esp-idf/main/CMakeFiles/__idf_main.dir/all] Erro 2
make: *** [Makefile:136: all] Erro 2
